--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Prank You</title>
+<title>Prank You!!!</title>
 </head>
-<body>
-<h1>Maybe this'll work</h1>
-<p>Okay...it's doing something now...</p>
+<body style="background-color:tan;">
+<h1 style="font-family:comic sans ms;color:maroon;font-weight:500;font-variant:small-caps;">Thank you for the giftcard to Texas Roadhouse!</h1>
+<p style="font-family:courier;color:blue;">I will be sure to use it wisely with Jacob and Caleb. We will be going for the world record for baskets of rolls eaten.</p>
+<h2 style="font-family:comic sans ms;color:maroon;font-weight:500;font-variant:small-caps;">P.S.</h2>
+<p2 style="font-family:courier;color:blue;">I hope you didn't just click on this link without using a vm, that wouldn't be very cybersecurity of you ;)</p2>
 </body>
 </html>
