--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
 <title>Prank You!!!</title>
 </head>
-<body style="background-color:tan;">
-<h1 style="font-family:comic sans ms;color:maroon;font-weight:500;font-variant:small-caps;">Thank you for the giftcard to Texas Roadhouse!</h1>
-<p style="font-family:courier;color:blue;">I will be sure to use it wisely with Jacob and Caleb. We will be going for the world record for baskets of rolls eaten.</p>
-<h2 style="font-family:comic sans ms;color:maroon;font-weight:500;font-variant:small-caps;">P.S.</h2>
-<p2 style="font-family:courier;color:blue;">I hope you didn't just click on this link without using a vm, that wouldn't be very cybersecurity of you ;)</p2>
+<body>
+<h1>Thank you for the giftcard to Texas Roadhouse!</h1>
+<p>I will be sure to use it wisely with Jacob and Caleb. We will be going for the world record for baskets of rolls eaten.</p>
+<h2">P.S.</h2>
+<p2>I hope you didn't just click on this link without using a vm, that wouldn't be very cybersecurity of you ;)</p2>
 </body>
 </html>
