--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Prank You!!!</title>
-</head>
-<body>
-<h1>Thank you for the giftcard to Texas Roadhouse!</h1>
-<p>I will be sure to use it wisely with Jacob and Caleb. We <i>will</i> be going for the world record for baskets of rolls eaten.</p>
-<h2">P.S.</h2>
-<p2>
-  <br>I hope you didn't just click on this link without using a vm, that wouldn't be very cybersecurity of you ;)</p2>
-</body>
+  <head>
+    <title>Prank You!!!</title>
+  </head>
+  <body>
+    <h1>Thank you for the giftcard to Texas Roadhouse!</h1>
+      <p>I will be sure to use it wisely with Jacob and Caleb. We <i>will</i> be going for the world record for baskets of rolls eaten.</p>
+    <h2">P.S.</h2>
+      <p2>I hope you didn't just click on this link without using a vm, that wouldn't be very cybersecurity of you ;)</p2>
+  </body>
 </html>
