--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <h1>Thank you for the giftcard to Texas Roadhouse!</h1>
       <p>I will be sure to use it wisely with Jacob and Caleb. We <i>will</i> be going for the world record for baskets of rolls eaten.</p>
     <h2">P.S.</h2>
-      <p2>I hope you didn't just click on this link without using a vm, that wouldn't be very cybersecurity of you ;)</p2>
+      <p2><br>I hope you didn't just click on this link without using a vm, that wouldn't be very cybersecurity of you ;)</p2>
     <h3></h3>
     <h4>Sincerely,</h4>
     <h5>    Peter Gilbert</h5>
